Add subtle drop shadow to card

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -40,7 +40,7 @@ body {
   flex-direction: row-reverse;
   border-radius: 15px;
   position: absolute;
-
+  box-shadow: "2px 4px 2px 1px";
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
